--- a/design-doc/bibliography.bib
+++ b/design-doc/bibliography.bib
@@ -25,3 +25,12 @@
     urldate = {2025-12-27},
     version = {1.04},
 }
+
+@video{bps-sendit,
+    title = {How Do You Build A Level 3 Rocket?},
+    author = {Joe Barnard},
+    publisher = {BPS.space},
+    url = {https://www.youtube.com/watch?v=KoqgiMBA4IY},
+    urldate = {2025-12-28},
+    date = {2022-06-15},
+}
