--- a/design-doc/sections/requirements.tex
+++ b/design-doc/sections/requirements.tex
@@ -38,6 +38,7 @@ These requirements can be given up, just at my own disappointment.
 \subsection{Secondary Requirements}
 
 \begin{enumerate}[label={R 2.\arabic*}]
+    \item The rocket must fly a 38mm motor
 	\item The rocket must be capable of recovery deployment both via motor
 	      ejection charge and electronic control, under the assumption that both
 	      fire during flight.
@@ -71,6 +72,8 @@ These requirements can be given up, just at my own disappointment.
 	      for access to the atmosphere during flight.
 	\item All separate volumes of the rocket must have sufficient venting holes
 	      to prevent unintended separation.
+	\item The rocket avionics bay must be capable of supporting a redundant
+	      deployment configuration.
 \end{enumerate}
 
 \subsection{Tertiary Requirements}
@@ -80,4 +83,5 @@ These requirements can be given up, just at my own disappointment.
 	      (either fiberglass or carbon fiber is acceptable)
 	\item No fastener should be a Phillips head
 	\item The rocket should be easy to manufacture
+    \item The rocket might have a boat-tail
 \end{enumerate}
