Mission patch on front cover

--- a/design-doc/main.tex
+++ b/design-doc/main.tex
@@ -44,6 +44,9 @@
 % TITLE
 
 \maketitle
+\begin{center}
+    \includegraphics[width=0.7\linewidth]{assets/MissionPatch.png}
+\end{center}
 \pagebreak
 
 % ABSTRACT
